# MLX-Server

./: .gitignore  AGENTS.md  README.md  install-linux.sh  install-windows.ps1  install.sh  pyproject.toml  run-linux.sh  run-windows.ps1  run.sh  uninstall-windows.ps1  uninstall.sh
src/mlx_launcher/: __init__.py  _util.py  app.py  bootstrap.py  hf.py  theme.py
src/mlx_launcher/acp/: agent.py  bridge.py  entry.py
src/mlx_launcher/chat/: blocks.py  capabilities.py  client.py  fs_tools.py  knowledge.py  mcp_client.py  models.py  prompted_tools.py  skills.py  store.py  tool_calls.py  tools.py  voice.py
src/mlx_launcher/client/: __init__.py
src/mlx_launcher/config/: flags.py  models.py  store.py
src/mlx_launcher/core/: __init__.py  agent.py  compaction.py  events.py  instructions.py  messages.py  server_main.py  service.py  session.py  skills.py
src/mlx_launcher/core/persistence/: chats.py  config.py
src/mlx_launcher/core/server/: flags.py  manager.py  readiness.py
src/mlx_launcher/core/tools/: __init__.py  fs.py  mcp.py  phrasing.py  web.py
src/mlx_launcher/engine/: __init__.py  base.py  extract.py  openai.py  prompted.py  streaming.py
src/mlx_launcher/models/: __init__.py  chat.py  config.py
src/mlx_launcher/screens/: chat.py  dashboard.py  editor.py  hf_browse.py  mcp_manager.py  project_editor.py  running.py  setup.py  skill_editor.py  skills_manager.py  subagent_editor.py  theme_picker.py  xcode_help.py
src/mlx_launcher/server/: discovery.py  manager.py  readiness.py
src/mlx_launcher/widgets/: address_panel.py  banner.py  code_block.py  path_input.py  safe_content.py  thinking.py  toggle_chip.py
src/mlx_launcher/xcode/: helpers.py
tests/: conftest.py  test_acp_agent.py  test_agent.py  test_app_startup.py  test_architecture.py  test_bugfixes.py  test_chat.py  test_chat_persistence.py  test_client.py  test_flags.py  test_fs_tools.py  test_hf.py  test_path_input.py  test_project_sidebar.py  test_prompted_tools.py  test_server.py  test_service.py  test_skills.py  test_store.py  test_tool_calls.py  test_voice.py  test_xcode_helpers.py
