[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlx-launcher"
version = "0.1.0"
description = "A Claude-Code-styled terminal app to launch and manage MLX (mlx_lm.server) servers, with Xcode 27 OpenAI-provider + ACP integration."
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = { text = "MIT" }
authors = [{ name = "Nick Psarakis" }]
keywords = ["mlx", "llm", "tui", "textual", "acp", "xcode"]
dependencies = [
    "textual>=0.86",
    "httpx>=0.27",
    "agent-client-protocol>=0.10,<0.11",
    "platformdirs>=4.0",
    "pydantic>=2.7",
    "mcp>=1.0",
    "ddgs>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "textual-dev>=1.5",
]

[project.scripts]
mlx-launcher = "mlx_launcher.app:run"
mlxs = "mlx_launcher.app:run"
mlx-acp-agent = "mlx_launcher.acp.entry:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mlx_launcher"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
