[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlx-launcher"
version = "0.1.2"
description = "LIS (Local Inference Server) — a TUI to launch and manage local model servers (MLX + llama.cpp), with Xcode 27 OpenAI-provider + ACP integration."
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = { text = "MIT" }
authors = [{ name = "Nick Psarakis" }]
keywords = ["mlx", "llm", "tui", "textual", "acp", "xcode"]
dependencies = [
    "textual>=0.86",
    "httpx>=0.27",
    "agent-client-protocol>=0.10,<0.11",
    "platformdirs>=4.0",
    "pydantic>=2.7",
    "mcp>=1.0",
    "ddgs>=9.0",
    "pypdf>=4.0",
    "huggingface_hub>=0.34,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "textual-dev>=1.5",
]
# Voice I/O (mic speech-to-text + read-aloud text-to-speech). Optional and lazily
# imported — the app runs fine without it; the chat buttons show an install hint.
# mlx-whisper on Apple Silicon, faster-whisper elsewhere; Kokoro-82M for TTS.
voice = [
    "sounddevice>=0.4",
    "numpy>=1.24",
    "kokoro-onnx>=0.4",
    "mlx-whisper>=0.4; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "faster-whisper>=1.0; sys_platform != 'darwin' or platform_machine != 'arm64'",
]

[project.scripts]
lis-start = "mlx_launcher.app:run"
mlx-acp-agent = "mlx_launcher.acp.entry:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mlx_launcher"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
